Ensure empty lists are left aligned
The ::last-child selector has a higher specificity so we need to
add ::first-child and then definition order takes precedence.

--- a/app/assets/stylesheets/petitions/admin/_list.scss
+++ b/app/assets/stylesheets/petitions/admin/_list.scss
@@ -181,6 +181,10 @@
       &:last-child {
         text-align: right;
       }
+
+      &:first-child {
+        text-align: left;
+      }
     }
 
     code {
